[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'template-node-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.template-node-runtime]
default-features = false
path = '..'

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['template-node-runtime/std']
